--- a/html/scatter.html
+++ b/html/scatter.html
@@ -2,37 +2,7 @@
 <head>
     <title>Temperature Plot</title>
     <script type="text/javascript" src="d3.min.js"></script>
-    <style>
-
-        .chart div {
-            font: 10px sans-serif;
-            background-color: steelblue;
-            text-align: right;
-            padding: 3px;
-            margin: 1px;
-            color: white;
-        }
-
-        .chart rect {
-            stroke: white;
-            fill: steelblue;
-        }
-
-        .axis text {
-            font-family: sans-serif;
-            font-size: 11px;
-        }
-
-        .axis path,
-        .axis line {
-            fill: none;
-            stroke: black;
-            shape-rendering: crispEdges;
-        }
-
-    </style>
-
-
+    <link rel="stylesheet" type="text/css" href="chart-style.css">
 </head>
 <body>
 
