--- a/html/bb.html
+++ b/html/bb.html
@@ -5,7 +5,8 @@
         <script type="text/javascript" src="jquery.js"></script>
         <script type="text/javascript" src="underscore.js"></script>
         <script type="text/javascript" src="backbone.js"></script>
-                
+        <script type="text/javascript" src="d3.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="chart-style.css"/>
     </head>
     <body>
         <h1>Sous-vide controller</h1>
@@ -48,5 +49,7 @@
         <div id="gui">
             <script type="text/coffeescript" src="bb2.coffee"></script>        
         </div>
+
+        <script type="text/javascript" src="graph.js"></script>
     </body>
 </html>
