--- a/html/main.html
+++ b/html/main.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>BB</title>
+        <title>Sous-vide controller</title>
         <script type="text/javascript" src="coffee-script.js"></script>
         <script type="text/javascript" src="jquery.js"></script>
         <script type="text/javascript" src="underscore.js"></script>
